SERVER-33627: InitialSyncer needs to handle exceptions

(cherry picked from commit 07fe606fcf78e668ee821a93af489f078323851a)